fixing bugs2